--- a/Online-Clinic/Online-Clinic.csproj
+++ b/Online-Clinic/Online-Clinic.csproj
@@ -124,4 +124,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Doktor\" />
+  </ItemGroup>
+
 </Project>
