--- a/Online-Clinic.Services/Online-Clinic.Services.csproj
+++ b/Online-Clinic.Services/Online-Clinic.Services.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>Online_Clinic.Services</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
+  </ItemGroup>
+
 </Project>
