--- a/Online-Clinic.Services/Online-Clinic.Services.csproj
+++ b/Online-Clinic.Services/Online-Clinic.Services.csproj
@@ -9,4 +9,9 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Online-Clinic.Common\Online-Clinic.Common.csproj" />
+    <ProjectReference Include="..\Online-Clinic.Data\Online-Clinic.Data.csproj" />
+  </ItemGroup>
+
 </Project>
