--- a/Online-Clinic/Online-Clinic.csproj
+++ b/Online-Clinic/Online-Clinic.csproj
@@ -186,6 +186,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Online-Clinic.Common\Online-Clinic.Common.csproj" />
     <ProjectReference Include="..\Online-Clinic.Data\Online-Clinic.Data.csproj" />
+    <ProjectReference Include="..\Online-Clinic.Services\Online-Clinic.Services.csproj" />
   </ItemGroup>
 
 </Project>
